crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__popup_snapshot_tests__workflow_tests__workflow_filter_agents.snap
---
source: crates/crucible-cli/src/tui/testing/popup_snapshot_tests.rs
expression: h.render()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
> [agent] researcher Deep research and analysis                                 
  [agent] coder Code generation and review                                      
  [agent] writer Writing and editing                                            
                                                                                
 > @re                                                                          
                                                                                
▸ Plan │ Ready
