crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__popup_snapshot_tests__workflow_tests__workflow_long_descriptions.snap
---
source: crates/crucible-cli/src/tui/testing/popup_snapshot_tests.rs
expression: h.render()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
> search Search across all notes in your vault using semantic similarity        
  help Display comprehensive help for all available commands and features       
  clear Clear the current conversation history and start fresh                  
                                                                                
 >                                                                              
                                                                                
▸ Plan │ Ready
