crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__popup_snapshot_tests__workflow_tests__workflow_navigate_while_filtered.snap
---
source: crates/crucible-cli/src/tui/testing/popup_snapshot_tests.rs
expression: h.render()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  search Search notes semantically                                              
> new Start new session                                                         
  clear Clear conversation context                                              
  help Show available commands                                                  
  mode Switch session mode ↓                                                    
                                                                                
 > /s                                                                           
                                                                                
▸ Plan │ Ready
